--- a/styles/main.css
+++ b/styles/main.css
@@ -1,27 +1,89 @@
+#sidebar-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  width: 0px;
+  height: 100%;
+  padding-top: 10px;
+  font-family: "Roboto", serif;
+  color: white;
+  background-color: black;
+  z-index: 2;
+  overflow: hidden;
+  transition: all 0.5s ease; }
+  #sidebar-wrapper h2 {
+    font-size: 40px;
+    line-height: 40px;
+    margin: 4px;
+    padding: 0px; }
+  #sidebar-wrapper a {
+    color: white;
+    font-size: 24px;
+    margin-left: 10px; }
+  #sidebar-wrapper.open {
+    width: 320px; }
+  #sidebar-wrapper.sidebar-links {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+
+#close-btn {
+  margin-left: 30px;
+  margin-top: 10px;
+  align-self: flex-start;
+  color: white;
+  cursor: pointer; }
+  #close-btn:hover {
+    opacity: 0.5; }
+  #close-btn img {
+    height: 30px;
+    width: 30px; }
+
+#hamburger {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  height: 34px;
+  width: 40px;
+  left: 30px;
+  top: 20px;
+  border-radius: 4px;
+  background-color: black;
+  z-index: 1; }
+  #hamburger:hover {
+    background-color: #00CFFF; }
+  #hamburger img {
+    height: 30px;
+    width: 30px; }
+
 .hero {
   font-family: "Roboto", serif;
   text-align: center;
-  height: 800px;
+  min-height: 800px;
   background-size: cover;
   padding-bottom: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column; }
-  .hero h2 {
-    margin-top: 100px;
-    margin-bottom: 50px;
-    font-size: 40px;
-    line-height: 40px; }
   .hero.landscape {
     color: white; }
   .hero.bridge {
     background-image: url(../img/bridge/full-width.jpg);
     width: 100%; }
+  .hero h1 {
+    line-height: 55px;
+    font-size: 72px; }
+  .hero h2 {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-size: 40px;
+    line-height: 40px; }
 
-#intro h1 {
-  line-height: 55px;
-  font-size: 72px; }
 #intro h1, #intro h5 {
   text-shadow: rgba(0, 0, 0, 0.25) 0px 5px 5px; }
 #intro h5 {
@@ -32,16 +94,15 @@
 .cta {
   background-color: black;
   color: white;
-  padding: 0px;
+  padding: 0;
   width: 180px;
   font-size: 18px;
   line-height: 50px;
   border: none;
   border-radius: 4px;
   cursor: pointer; }
-
-.cta:hover {
-  background-color: #00CFFF; }
+  .cta:hover {
+    background-color: #00CFFF; }
 
 #about {
   min-height: 0px; }
@@ -55,7 +116,6 @@
       margin-top: 0;
       margin-bottom: 0;
       font-size: 60px;
-      font-weight: 700px;
       line-height: 55px; }
   #about .right-col {
     text-align: left;
@@ -67,8 +127,11 @@
 #gallery {
   background-color: #EEFDF9; }
   #gallery .col-md-4 {
-    overflow: hidden  ;
-    padding: 0 5px 10px 5px; }
+    overflow: hidden;
+    padding-top: 0;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    padding-left: 5px; }
     #gallery .col-md-4 img {
       height: 100%;
       max-width: 390px;
@@ -78,19 +141,24 @@
   font-size: 24px;
   margin-bottom: 40px;
   max-width: 740px; }
-#contact #social {
+
+#social {
   padding: 20px; }
-  #contact #social a {
-    margin: 0 0 0 10px;
+  #social a {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 10px;
     text-decoration: none; }
-  #contact #social img {
+  #social img {
     height: 20px; }
-    #contact #social img:hover {
+    #social img:hover {
       opacity: 0.5; }
 
 #footer {
   height: 40px;
-  margin: 0 10%;
+  margin-left: 10%;
+  margin-right: 10%;
   padding-bottom: 150px;
   display: flex;
   flex-direction: row;
@@ -101,33 +169,35 @@
     line-height: 40px;
     padding: 0;
     margin-left: 5px;
-    margin-right: 25px; }
+    margin-right: 20px; }
   #footer .footer-item {
     flex: 1;
     max-width: 100px; }
-  #footer .copyright {
-    margin-left: auto;
-    color: #00E2AC; }
+
+.copyright {
+  margin-left: auto;
+  color: #00E2AC; }
 
 @media only screen and (max-width: 480px) {
   #intro {
     min-height: 640px; }
 
-  .left-col h2 {
+  #about .left-col h2 {
     font-size: 42px;
     line-height: 40px; }
 
   #footer {
-    margin: 0, 20px; }
+    margin-left: 20px;
+    margin-right: 20px; }
     #footer h4 {
       margin-right: 20px; } }
 @media only screen and (max-width: 992px) {
   .row {
     width: 100%; }
 
-  .col-md-4 {
+  #gallery .col-md-4 {
     width: 100%; }
-    .col-md-4 img {
+    #gallery .col-md-4 img {
       width: 100%;
       max-width: 992px;
       max-height: 900px; } }
